--- a/index.html
+++ b/index.html
@@ -157,6 +157,11 @@
                 <img src="kegiatan3.jpg" alt="Kegiatan 3" />
                 <p></p>
                 <a href="https://www.sololearn.com/certificates/CC-ANLCIHMP" target="_blank">Lihat Detail</a>
+                 <div class="gallery-item">
+                <img src="kegiatan4.jpg" alt="Kegiatan 4" />
+                <p></p>
+                <a href="https://www.sololearn.com/certificates/CC-EPWTULT2" target="_blank">Lihat Detail</a>
+            <div class="gallery-item">
             </div>
         </div>
     </section>
