--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@
                 <img src="Project4.png" alt="Proyek 4" />
                 <a href="https://inatokan.github.io/website-personil/" target="_blank" class="btn">Lihat Proyek</a>
                 <p>Dalam proyek Tugas 4 ini, saya telah menyelesaikan pembuatan dashboard yang bertujuan untuk memberikan visualisasi data yang informatif dan interaktif.</p>
-                <div class="project-item">
+            </div>
+                <div class="project-item">    
                 <img src="Project5.png" alt="Proyek 5" />
                 <a href="https://inatokan.github.io/gamesnake/" target="_blank" class="btn">Lihat Proyek</a>
                 <p>Dalam proyek Tugas 5 ini, saya telah menyelesaikan pembuatan permainan Snake yang bertujuan untuk memberikan pengalaman bermain yang menyenangkan dan mengasah keterampilan dalam pengembangan web. Permainan ini menggunakan HTML, CSS, dan JavaScript untuk menggambar ular dan makanan pada elemen <canvas>, serta mengontrol gerakan ular menggunakan tombol arah pada keyboard. </p>
@@ -146,26 +147,26 @@
     <section id="photo-gallery">
         <p class="section__text__p1">Galeri Foto</p>
         <h1 class="title">Photo Gallery Kegiatan</h1>
-        <div class="gallery-container">
-            <div class="gallery-item">
+                <div class="gallery-container">
+                <div class="gallery-item">
                 <img src="kegiatan1.jpg" alt="Kegiatan 1" />
                 <p></p>
                 <a href="https://www.sololearn.com/certificates/CC-HYQMFN8S" target="_blank">Lihat Detail</a>
             </div>
-            <div class="gallery-item">
+                <div class="gallery-item">
                 <img src="kegiatan2.jpg" alt="Kegiatan 2" />
                 <p></p>
                 <a href="https://www.sololearn.com/certificates/CC-PF1WUOZB" target="_blank">Lihat Detail</a>
             </div>
-            <div class="gallery-item">
+                <div class="gallery-item">
                 <img src="kegiatan3.jpg" alt="Kegiatan 3" />
                 <p></p>
                 <a href="https://www.sololearn.com/certificates/CC-ANLCIHMP" target="_blank">Lihat Detail</a>
-                 <div class="gallery-item">
+                <div class="gallery-item">
                 <img src="kegiatan4.jpg" alt="Kegiatan 4" />
                 <p></p>
                 <a href="https://www.sololearn.com/certificates/CC-EPWTULT2" target="_blank">Lihat Detail</a>
-            <div class="gallery-item">
+                <div class="gallery-item">
             </div>
         </div>
     </section>
