--- a/index.html
+++ b/index.html
@@ -181,15 +181,15 @@
                 <p><a href="https://www.linkedin.com">LinkedIn</a></p>
             </div>
         </div>
-        <div class="map-container">
-            <iframe 
-                class="map" 
-                src="https://www.google.com/maps/@-6.350107,106.69266,3a,75.0y,56.287598h,75.012314t/data=!3m4!1e1!3m2!1s4wa2P34_mHbjHK5vOs2yBA!2e0?g_st=ac" 
-                allowfullscreen="" 
-                loading="lazy">
-            </iframe>
-    </section>
-
+      <div class="map-container">
+        <iframe 
+            class="map" 
+            src="https://www.google.com/maps/@-6.350107,106.69266,3a,75.0y,56.287598h,75.012314t/data=!3m4!1e1!3m2!1s4wa2P34_mHbjHK5vOs2yBA!2e0?g_st=ac" 
+            allowfullscreen="" 
+            loading="lazy">
+        </iframe>
+    </div>
+</section>
     <!-- Footer -->
     <footer>
         <nav>
